--- a/templates/task/detail_task.html
+++ b/templates/task/detail_task.html
@@ -13,5 +13,8 @@
             <button type="button" class="btn btn-danger">Excluir</button>
         </a>
     </td>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'home' %}">Home</a>
+    </li>
 {% endif %}
 {% endblock %}
