--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,3 @@
-
 {% block content %}
 <main>
     <!DOCTYPE html>
@@ -17,6 +16,12 @@
     </li>
     <li class="nav-item">
         <a class="nav-link" href="{% url 'add_task' %}">Criar Tarefa</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'logout_client' %}">Logout</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'home' %}">Home</a>
     </li>
     
     {% else %}
