--- a/templates/task/list_task.html
+++ b/templates/task/list_task.html
@@ -14,5 +14,8 @@
         <a class="nav-link" href="{% url 'add_task' %}">Criar Tarefa
         </a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'home' %}">Home</a>
+    </li>
     {% endif %}
 {% endblock %}
