--- a/templates/base.html
+++ b/templates/base.html
@@ -19,18 +19,16 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'register' %}">Cadastrar Cliente</a>
                     </li>
-                    {% if user.is_authenticaded %}
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'list_task' %}">Listar Tarefas</a>
                         </li>
-                    {% endif %}
                 </ul>
                 <ul class="nav justify-content-end">
                     <li class="nav-item">
                     {% if user.is_authenticated %}
                       <a class="nav-link active" aria-current="page" href="{% url 'logout_client' %}">Sair</a>
                     {% else %}
-                      <a class="nav-link active" aria-current="page" href="{% url 'login_client' %}">Login</a>
+                      <a class="nav-link active" aria-current="page" href="{% url 'login_client' %}">Entrar</a>
                     {% endif %}
                     </li>
                 </ul>
