--- a/templates/task/detail_task.html
+++ b/templates/task/detail_task.html
@@ -45,17 +45,17 @@
           <div class="row g-2">
             <div class="col-2 col-md-1 order-2 order-md-1">
                 <a class="btn btn-default" href="{% url 'edit_task' id=task.id %}">
-                    <button type="button" class="btn btn-danger">Editar</button>
+                    <button type="button" class="btn btn-outline-danger">Editar</button>
                 </a>
             </div>
             <div class="col-2 col-md-1 order-1 order-md-1">
                 <a class="btn btn-default" href="{% url 'delete_task' id=task.id %}">
-                    <button type="button" class="btn btn-danger">Excluir</button>
+                    <button type="button" class="btn btn-outline-danger">Excluir</button>
                 </a>
             </div>
             <div class="col-2 col-md-1 order-1 order-md-1">
                 <a class="btn btn-default" href="{% url 'list_task'%}">
-                    <button type="button" class="btn btn-danger">Voltar</button>
+                    <button type="button" class="btn btn-outline-primary">Voltar</button>
                 </a>
               </div>
           </div>
