--- a/templates/task/edit_task.html
+++ b/templates/task/edit_task.html
@@ -9,10 +9,10 @@
                     {{ form.as_p }}
                 </div>
                 <a>
-                    <button type="submit" class="save btn btn-default">Concluir</button>
+                    <button type="submit" class="save btn btn-success">Concluir</button>
                 </a>
                 <a href="javascript:history.back()"> 
-                    <button type="button" class="btn btn-outline-danger">Cancelar</button>
+                    <button type="button" class="btn btn-danger">Cancelar</button>
                 </a>
         </form>
     {% endif %}
