--- a/templates/task/list_task.html
+++ b/templates/task/list_task.html
@@ -15,7 +15,7 @@
     <div class="container d-flex justify-content-between">
         <h1>Lista de Tarefas</h1>
         <a href="{% url 'add_task' %}">
-            <button tyé="button" class="btn btn-outline-primary">Criar Tarefa</button>
+            <button tyé="button" class="save btn btn-success">Criar Tarefa</button>
         </a>
       </div>
         {% for tasks in task %}
