--- a/templates/task/add_task.html
+++ b/templates/task/add_task.html
@@ -9,7 +9,7 @@
                     {{ form.as_p }}
                 </div>
                 <div class="d-flex justify-content-end">
-                    <a class="btn btn-outline-danger" href="javascript:history.back()">Cancelar</a>
+                    <a class="btn btn-danger" href="javascript:history.back()">Cancelar</a>
                     <button type="submit" class="save btn btn-success">Salvar</button>
                 </div>
         </form>
