--- a/templates/client/register.html
+++ b/templates/client/register.html
@@ -7,6 +7,9 @@
             <div class="form-group">
                 {{ form.as_p }}
              </div>
-            <button type="submit" class="save btn btn-default">Cadastrar</button>
+             <div class="d-flex justify-content-end">
+                <a class="btn btn-danger" href="javascript:history.back()">Cancelar</a>
+                <button type="submit" class="save btn btn-success">Cadastrar</button>
+            </div>
     </form>
 {% endblock %}
