melhorando front-end

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'home' %}">Home</a>
+                        <a class="navbar-brand" href="{% url 'home' %}">Nano Tarefas</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'register' %}">Cadastrar Cliente</a>
