--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Tarefas</title>
+        <title>Nano Tarefas</title>
         <style>
             h1 {
                 color: #333;
@@ -60,11 +60,32 @@
                 width: 120px;
                 height: 30px;
             }
+            .txt {
+                margin: 150px 0;
+            }
         </style>
     </head>
     <body>
     {% if user.is_authenticated or user.is_superuser %}
-
+    <br>
+    <section>
+        <h1 class="hero_title">
+            Nano Tarefas 
+            <br>
+            <span>Um Gerenciador de Tarefas</span>
+        </h1>
+        <div class="hero_img-wrapper">
+            <img class="hero_img-back" width="500" style="float: right;" loading="lazy" title="Nano Tarefas" src="/static//img/task_home.png" alt="Nano Tarefas">
+        </div>
+        <div class="txt">
+        O site oferece um gerenciador de tarefas simples e intuitivo para ajudá-lo a priorizar e categorizar<br>
+        suas tarefas com prazos definidos. Com uma interface responsiva, você pode visualizar facilmente suas<br>
+        tarefas pendentes em qualquer dispositivo, economizando tempo e energia.
+        </div>
+    </section>
+    <section class="block-why">
+    </section>
+</div>
     {% else %}
         <br>
         <h1 class="font-weight-light my-4 text-center">Login</h1>
