add confirmações de tarefas

--- a/templates/task/detail_task.html
+++ b/templates/task/detail_task.html
@@ -49,7 +49,7 @@
                 </a>
             </div>
             <div class="col-2 col-md-1 order-1 order-md-1">
-                <a class="btn btn-default" href="{% url 'delete_task' id=task.id %}">
+                <a class="btn btn-default" href="{% url 'confirm_delete_task' id=task.id %}">
                     <button type="button" class="btn btn-outline-danger">Excluir</button>
                 </a>
             </div>
