função deletar conta

--- a/templates/home.html
+++ b/templates/home.html
@@ -85,6 +85,9 @@
     </section>
     <section class="block-why">
     </section>
+    <a href="{% url 'confirm_delete_client' %}">
+        Deletar Conta
+    </a>
 </div>
     {% else %}
         <br>
