Atualizar o base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
                         <a class="navbar-brand" href="{% url 'home' %}">Nano Tarefas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'register' %}">Cadastrar Cliente</a>
+                        <a class="nav-link" href="{% url 'register' %}">Cadastro</a>
                     </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'list_task' %}">Listar Tarefas</a>
